<resources>
    <string name="app_name">Mindi</string>

    <!-- test id-->
    <string name="ads_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="reward_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rectangle_banner_ad_unit">ca-app-pub-3940256099942544/6300978111</string>

    <string name="app_share_msg">Hey! Check out my app</string>
    <string name="app_share_base">"https://play.google.com/store/apps/dev?id=7983331285992364438"</string>

    <string name="app_link">https://play.google.com/store/apps/details?id=</string>

    <string name="instagram_package">com.instagram.android</string>
    <string name="facebook_package">com.facebook.katana</string>
    <string name="whatsapp_package">com.whatsapp</string>
    <string name="share_via">Share via</string>

    <string name="guest">Guest</string>
    <string name="settings">Settings</string>
    <string name="vip_store">VIP Store</string>
    <string name="profile_details">Profile Details</string>
    <string name="guest_chip">5k</string>
    <string name="free_chip_count">500</string>
    <string name="create_table">Create Table</string>
    <string name="create">Create</string>
    <string name="new_game">New Game</string>
    <string name="back_to_lobby">Back to lobby</string>
    <string name="join_table">Join Table</string>
    <string name="join">Join</string>
    <string name="find_table">Find Table</string>
    <string name="find">Search</string>
    <string name="select_deck">Select Deck</string>
    <string name="deck_1">Deck 1</string>
    <string name="deck_2">Deck 2</string>
    <string name="deck_3">Deck 3</string>
    <string name="deck_4">Deck 4</string>
    <string name="select_bet_price">Select Bet Price</string>
    <string name="mode">Mode</string>
    <string name="select_player">Select Player</string>
    <string name="hide_mode">Hide Mode</string>
    <string name="cut_mode">Katte Mode</string>
    <string name="player_4">4 Player</string>
    <string name="player_6">6 Player</string>
    <string name="player_8">8 Player</string>
    <string name="bet_price">Bet Price</string>
    <string name="enter_code">Enter code</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="please_enter_the_code_to_play_with_a_friend">Please enter the code to play with a friend.</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>

    <string name="player_statistics">Player Statistics</string>
    <string name="game_win">Game Win</string>
    <string name="game_lost">Game Lost</string>
    <string name="total_games_played">Total Games Played</string>

    <string name="tab_avatar">Avatar</string>
    <string name="tab_cards">Cards</string>
    <string name="tab_tables">Tables</string>
    <string name="tab_background">Background</string>

    <string name="your">Your</string>
    <string name="opponent">Opponent</string>
    <string name="team_acquired_mindis"> team acquired %s mindis </string>
    <string name="total_hands">&amp; total %s hands</string>

    <string name="m_team_declaration">Declare Teams</string>
    <string name="m_first_turn">First Turn: %s</string>
    <string name="m_distributing_cards">Dealing Cards</string>
    <string name="m_wait_for_all_players">Waiting for Players</string>
    <string name="m_collecting_bet_price">Collecting bet price</string>

    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibrate</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="how_to_play">How to play</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="buy">Buy</string>
    <string name="watch">Watch</string>
    <string name="buy_avatar_title">Set This Avatar</string>
    <string name="buy_card_back_title">Set This Card</string>
    <string name="buy_table_title">Set This Table</string>
    <string name="buy_background_title">Set This Background</string>
    <string name="bet">Bet:</string>
    <string name="game_result">Game Result</string>
    <string name="game_winner">Winner</string>
    <string name="game_loser">Loser</string>
    <string name="please_wait">Please Wait…</string>
    <string name="ad_loading">Ad loading…</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="restore">Restore</string>
    <string name="chip_store">Chip Store</string>
    <string name="help">Help</string>
    <string name="table_information">Table Information</string>
    <string name="table_bet_price">Initial Bet price :</string>
    <string name="table_no_of_player">No. of Players :</string>
    <string name="table_no_of_deck">No. of Deck :</string>
    <string name="table_hukum_mode">Hukum Mode :</string>
    <string name="table_hide_mode">Hide. In case of Hide, The hidden card will be opened and that card  sign will become HUKAM sign.</string>
    <string name="table_katte_mode">katte. In case of Katte HUKAM, User will be able to declare HUKAM of their choice when he/she is out of current suite being played.</string>
    <string name="table_result">Result :</string>
    <string name="table_result_msg">In case team with all Mindi have getting double chips and opponent double pay for no Mindi.</string>
    <string name="not_enough_chip_new_game">You don\'t have enough chips to play another.</string>
    <string name="not_enough_chip_create_table">You don\'t have enough chips to create a table.</string>
    <string name="not_enough_chip_join_table">Insufficient chips to join the table.</string>
    <string name="not_enough_chip_find_table">Oops! You need chips to Find  a table.</string>
    <string name="not_enough_chips_avatar">You’ll need more chips to get this awesome avatar!</string>
    <string name="not_enough_chips_cards">Looks like you\'re short on chips for these cards.</string>
    <string name="not_enough_chips_tables">This table can\'t be yours just yet — earn more chips!</string>
    <string name="not_enough_chips_background">Not enough chips! Try again after stacking up some more.</string>
    <string name="internet_error_message">No network is available. Please check your internet connection.</string>
    <string name="are_you_sure_to_exit">Are you sure you want to exit game?</string>
    <string name="exit_game">Exit Game</string>
    <string name="internet_error">Internet Error</string>
    <string name="not_enough_chip">Out of Chips</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>

    <string name="image_content_description">Image</string>
    <string name="buy_chip">Buy Chip</string>
    <string name="watch_ads">Watch Ad</string>
    <string name="check_internet">Checking connection…</string>
    <string name="collected">Collected</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="day">Day</string>
    <string name="daily_reward">Daily Bonus</string>
    <string name="daily_reward_message">Congratulations! Today’s Coins Are Here!</string>
    <string name="or">OR</string>
    <string name="collect">Collect</string>
    <string name="zero">0</string>
    <string name="waiting">Waiting…</string>
    <string name="invite">Invite</string>
    <string name="trump_card">Trump Card</string>
    <string name="mindi">Mindi</string>
    <string name="hands">Hands</string>

    <string name="help_msg1">katte. In case of Katte HUKAM, User will be able to declare HUKAM of their choice when he/she is out of current suite being played.</string>
    <string name="help_msg2">The game will be played with standard two 52 card deck</string>
    <string name="help_msg3">Out of 104 cards we have removed 52 card ( 8 cards of 2,3,4,5,6,7 and 4 cards of 8).</string>
    <string name="help_msg4">The playing 52 cards are 4 cards of 8 and 8 cards of  9, 10, J, Q, K &amp; A.</string>
    <string name="help_msg5">On game startup, All player will get 13 cards. The winner of the turn selection round will hide one card as Suprem color card.</string>
    <string name="help_msg6">Everybody will play one card when their turn comes. The person who played highest card will win that hand and will take turn 1st on next round.</string>
    <string name="help_msg7">If there are two Ace ( or King/Wueen/Jack) in played trick then person who played last Ace will win that Hand.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>