<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_126sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chip_plan_cons"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_142sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/chip_store_bg_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/chip_store_item_bg1"
                android:contentDescription="@string/image_content_description" />

            <com.keylogic.mindi.custom.StrokeTextView
                android:id="@+id/chip_store_remove_ads_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:gravity="center"
                android:singleLine="true"
                android:visibility="gone"
                android:text="@string/remove_ads"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_1sdp"
                app:txtStrokeEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/chip_restore_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:visibility="gone"
                android:src="@drawable/chip_store_restore"
                android:contentDescription="@string/image_content_description"
                android:layout_marginHorizontal="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/chip_store_total_amount_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_26sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/chip_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:contentDescription="@string/image_content_description"
                    android:src="@drawable/chip_store_plan1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:src="@drawable/ic_chip"
                        android:contentDescription="@string/image_content_description"/>

                    <com.keylogic.mindi.custom.StrokeTextView
                        android:id="@+id/total_chip_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:singleLine="true"
                        android:layout_marginHorizontal="@dimen/_4sdp"
                        android:text="@string/guest"
                        android:textColor="@color/chip_store_price_txt"
                        android:textSize="@dimen/_16ssp"
                        app:txtStrokeEnabled="false" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.keylogic.mindi.custom.BackgroundConstraintLayout
            android:id="@+id/chip_price_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30ssp"
            app:customHeight="@dimen/_30ssp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_minus15sdp"
            app:isStrokeEnabled="false"
            app:isBGElevationEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/chip_plan_cons"
            app:layout_constraintStart_toStartOf="@+id/chip_plan_cons"
            app:layout_constraintTop_toBottomOf="@+id/chip_plan_cons">

            <com.keylogic.mindi.custom.StrokeTextView
                android:id="@+id/chip_price_btn_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/guest"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

        </com.keylogic.mindi.custom.BackgroundConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>